package at.qe.skeleton.model;

public enum ShiftPlanState {
    DRAFT,
    PUBLISHED,
    APPROVED,
    COMPLETED,
    CANCELLED
}
