@startuml
' Define classes
class User {
    - userID: Long
    - username: String
    - password: String
    - email: String
    - name: String
    - surname: String
    - roles: List<UserRole>
    - absences: List<Absence>
}

class Department {
    - departmentID: Long
    - name: String
    - openTime: DateTime
    - closedTime: DateTime
}

class Absence {
    - start: DateTime
    - end: DateTime
}

class ShiftPlan {
    - date: DateTime
    - state: ShiftPlanState
}

class Shift {
    - startTime: DateTime
    - endTime: DateTime
}

enum UserRole {
    ADMIN
    MANAGER
    EMPLOYEE
}

enum ShiftPlanState {
    DRAFT
    PUBLISHED
    CANCELLED
}

' Define relationships
Department "1..*" -- "1" User: manager
Department --> "0..*" User: employees
Department "1" -- "0..*" ShiftPlan
ShiftPlan "1" -- "0..*" Shift
Shift "0..*" -- "0..*" User
User "1" -- "0..*" Absence: absences


@enduml
